--- a/public/templates/Activity Stream.html
+++ b/public/templates/Activity Stream.html
@@ -72,40 +72,33 @@
               <div class="pull-left"> Alerts </div>
             </li>
             <li class="noticebar-empty">
-              <h4 class="noticebar-empty-title">You have no alerts.
-</h4>
+              <h4 class="noticebar-empty-title">You have no alerts. </h4>
               <p class="noticebar-empty-text">See what your colleagues are doing.</p>
             </li>
           </ul>
         </li>
-         <li class="dropdown"> <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> 
-         
-     
-         <i class="fa fa-user big-font"></i> <span class="navbar-visible-collapsed">&nbsp;Invite new members&nbsp;</span> <span class="badge-plus"><i class="fa fa-plus"></i></span> 
-        </a>
+        <li class="dropdown"> <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="fa fa-user big-font"></i> <span class="navbar-visible-collapsed">&nbsp;Invite new members&nbsp;</span> <span class="badge-plus"><i class="fa fa-plus"></i></span> </a>
           <ul class="dropdown-menu noticebar-menu noticebar-hoverable" role="menu">
             <li class="">
-              <div class=" text-center padding-top"> <h3>Invite More Coworkers</h3></div>
+              <div class=" text-center padding-top">
+                <h3>Invite More Coworkers</h3>
+              </div>
             </li>
             <li >
-            <div class="padding">
-              <div class="form-group padding-top">
-                        
-                        <input type="email"
+              <div class="padding">
+                <div class="form-group padding-top">
+                  <input type="email"
                             class="form-control validate[required,equals[password]]"
                             id=""
                             name=""
                             placeholder="name@companyemailaddress.com">
-                    </div>
-                    <div class="">
-            <a><i class="fa fa-plus padding remove_icon"></i>Add More Coworkers</a>
-           </div>
-           <div class="btn btn-primary pull-right">Invite</div>
-           </div>
+                </div>
+                <div class=""> <a><i class="fa fa-plus padding remove_icon"></i>Add More Coworkers</a> </div>
+                <div class="btn btn-primary pull-right">Invite</div>
+              </div>
             </li>
           </ul>
         </li>
-        
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown navbar-profile"> <a class="padding-top-home" href="/dashboard">Home</a> </li>
@@ -113,7 +106,7 @@
           <ul class="dropdown-menu" role="menu">
             <li> <a href="Profile.html"> <i class="fa fa-user"></i> &nbsp;&nbsp;My Profile </a> </li>
             <li class="divider"></li>
-             <li> <a href="settings.html"> <i class="fa fa-cogs"></i> &nbsp;&nbsp;Settings </a> </li>
+            <li> <a href="settings.html"> <i class="fa fa-cogs"></i> &nbsp;&nbsp;Settings </a> </li>
             <li class="divider"></li>
             <li> <a href="#" onclick="this.childNodes[0].submit()">
               <form action="/logout" method="POST">
@@ -136,7 +129,7 @@
         <div class="text-center">
           <h5><a href="allfriend.html">123 Coworkers in Your Network</a></h5>
         </div>
-        <div class="list-group padding-top"> <a href="Activity Stream.html" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-asterisk text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="Activity Stream.html" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-home text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;My Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="inbox.html" class="list-group-item {@eq key="/dashboard/messages" value="{url}"}current{/eq}"> <i class="fa fa-envelope text-sidebar"></i> &nbsp;&thinsp;Messages <i class="fa fa-chevron-right list-group-chevron"></i> <span class="badge">3</span> </a> <a href="files.html" class="list-group-item {@eq key="/dashboard/files" value="{url}"}current{/eq}"> <i class="fa fa-paperclip text-sidebar"></i> &nbsp;&nbsp;Files <i class="fa fa-chevron-right list-group-chevron"></i> </a>  </div>
+        <div class="list-group padding-top"> <a href="Activity Stream.html" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-asterisk text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="Activity Stream.html" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-home text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;My Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="inbox.html" class="list-group-item {@eq key="/dashboard/messages" value="{url}"}current{/eq}"> <i class="fa fa-envelope text-sidebar"></i> &nbsp;&thinsp;Messages <i class="fa fa-chevron-right list-group-chevron"></i> <span class="badge">3</span> </a> <a href="files.html" class="list-group-item {@eq key="/dashboard/files" value="{url}"}current{/eq}"> <i class="fa fa-paperclip text-sidebar"></i> &nbsp;&nbsp;Files <i class="fa fa-chevron-right list-group-chevron"></i> </a> </div>
       </div>
       
       <!--inbox-->
@@ -144,7 +137,7 @@
         <h4 class="title-heading text-center">Activity Stream</h4>
         <div class="share-widget clearfix"> 
           <!-- Post an Idea -->
- <div id="post_idea_container" class="fb-container">
+          <div id="post_idea_container" class="fb-container">
             <textarea class="form-control share-widget-textarea" rows="5" placeholder="Ask a 360-degree Feedback Question…" tabindex="1"></textarea>
           </div>
           <!-- -->
@@ -161,7 +154,7 @@
             <div id="announcement" >
               <div class="announcement_list"> <i class="fa fa-users entirecompany_icon padding icon-color"></i>Entire Company <i class="fa fa-times padding remove_icon"></i> </div>
               <div class="announcement_list"> ntthuy@gmail.com <i class="fa fa-times padding remove_icon"></i> </div>
-              <div class="inline-block" > <i class="fa fa-plus padding remove_icon"></i>Add People </div>
+              <div class="inline-block" > <i class="fa fa-plus padding remove_icon"></i>Add Coworkers </div>
             </div>
           </div>
           <!-- --> 
@@ -293,8 +286,7 @@
         <p>
         <div class="row text-center suggested-coworker-box">
           <div class="row  pull-right suggested-coworker-close"> <a href="#"> <i class="fa fa-times"> </i> Close </a> </div>
-          
-          <div class="coworker-carousel-padding "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
+          <div class="coworker-carousel-padding "><a data-toggle="modal" data-target="#coworker_modal"><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></a></div>
           <div class="row coworker-carousel-button">
             <div class="col-md-6 text-left"><a class="btn btn-primary" href="#clients-carousel" data-slide="prev">&lsaquo;</a></div>
             <div class="col-md-6"><a class=" pull-right btn btn-primary" href="#clients-carousel" data-slide="next">&rsaquo;</a> </div>
@@ -302,16 +294,47 @@
           <div class=" coworker-profile">
             <p class="  text-center"><a class="coworker-name">Lizzel Harison</a> </p>
             <p class=" text-center coworker-title ">Project Manager</p>
-         
             <p class="profile-detail"> <b>Education:</b> University of Washington, Michael G. Foster School of Business</a> </p>
             <p class="profile-detail"> <b>Top Skills:</b> Customer service</p>
-            
           </div>
-          <div > 
-            <a class=" btn btn-primary" href="coworker-Profile.html" >See Full Profile</a> 
-          </div>
+          <div > <a class=" btn btn-primary" href="coworker-Profile.html" >Preview Coworker</a> </div>
         </div>
       </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="coworker_modal" tabindex="-1" role="dialog" aria-labelledby="modal_label" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form id="question_form" action="/faq" method="POST" role="form">
+        <fieldset>
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="modal_label"> <img class="coworker-preview-image" src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/>&nbsp; &nbsp;Lizzel Harison&nbsp;</h4>
+        </div>
+      </form>
+      <div class="coworker-preview">
+       
+          <p> <a  class="coworker-name" href="javascript:;">Lizzel Harison</a> shared an idea to <a> Entire Company</a>,<a> David Harison and 3 other people</a> </p> 
+          <p>orem ipsum dolor sit amet, consectetuer adipiscing elit. massa....</p>
+        
+      </div>
+      
+       <div class="coworker-preview">
+       
+          <p> <a  class="coworker-name" href="javascript:;">Lizzel Harison</a> </p> 
+          <p>orem ipsum dolor sit amet, consectetuer adipiscing elit. massa....</p>
+        
+      </div>
+       <div class="coworker-preview">
+       
+          <p> <a class="coworker-name" href="javascript:;">Lizzel Harison</a> posted a file <a> David Harison and 3 other people</a> </p> 
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. massa....</p>
+        
+      </div>
+      <hr>
+      <div class="text-center"> <a class="btn btn-primary" href="javascript:;">Add as Friend</a> <a class="btn btn-primary" href="javascript:;">Send Message</a> </div>
+      <hr>
     </div>
   </div>
 </div>
