--- a/public/templates/features.html
+++ b/public/templates/features.html
@@ -110,7 +110,7 @@
                             <img src="">
 
                             <p class="feature-text"  >
-                               You should be able to connect with coworkers whether they are in the field, on the road, or even at home. That is why we designed 360notion™ to work well with a wide array of devices including smart phones and tablets.
+                              Connect with coworkers at the office, on the road or at home. 360notion™ works well with a wide array of devices including smart phones and tablets.
                             </p >
                         </div>
 
@@ -120,12 +120,12 @@
                             </h3>
 
                             <p class="feature-text">
-                                Need to send sensitive data to your colleagues? 
+                                Need to send sensitive data to coworkers?
                             </p>
 
-                            <p class="feature-text">360notion™ allows you to send messages a la "Snapchat®" to expire them 30 seconds after 
-                                being read by the recipient. Snap messages are not stored in our databases to guarantee that 
-                                they don't leave any trace behind. 
+                            <p class="feature-text">
+
+360notion™ allows you to send snap messages that automatically delete from our databases 30 seconds after recipients open them. Snap messages do not leave an online trace.
                             </p>
                         </div>
 
@@ -135,12 +135,13 @@
                             </h3>
 
                             <p>
-                                Have you ever sent a document with typos and mistakes to your boss?
+                                Have you ever sent a document with typos and mistakes?
+
+
                             </p>
 
                             <p>
-                                No worries! With 360notion™, you can edit or delete any message that you have sent as long as 
-                                they haven't been read yet.
+                                Use 360notion to edit or delete messages you already sent before the recipients open them.
                             </p>
                         </div>
 
@@ -168,9 +169,7 @@
                             </p>
 
                             <p>
-                                Upload files securely through our site which enforces strict SSL connections to prevent 3rd parties 
-                                from intercepting your files. 360notion™ also provides custom file permissions that allow you to manage 
-                                data security by specifying who are permitted and who are restricted from viewing your files. 
+                              Upload files securely through our site. We always implement strict SSL connections to prevent third parties from intercepting your files. 360notion™ also provides custom file permissions for you to manage data security by specifying who can view specific files.
                             </p>
                         </div>
 
@@ -179,11 +178,12 @@
                                 <strong>Status Updates </strong></h3>
 
                             <p>
-                            Need to remind your company about something? Or broadcast an important announcement to everyone?
+                            Easily share important information.</p> <p>
+
+Share important updates with anyone or everyone in your company within seconds using 360notion™ status updates.
                             </p>
 
-                            <p>360notion™ allows you to share status updates to your entire network within seconds. 
-                            </p>
+                            
                         </div>
                     </div>
                 </div>
