--- a/public/templates/inbox.html
+++ b/public/templates/inbox.html
@@ -285,11 +285,13 @@
             </div>
           </div>
           <div class="row padding-chat">
-            <div class="col-xs-6 col-lg-4 coworker-image text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
+            <div class="col-xs-6 col-lg-4 coworker-image text-center demo-section"> <a data-toggle="modal" data-target="#question_modal"><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></a></div>
             <div class="col-xs-12 col-sm-6 col-lg-8"> <a class="coworker-name">Lizzel</a>
               <p class="coworker-title">Marketing Manager</p>
             </div>
           </div>
+          
+          
           <div class="row padding-chat">
             <div class="col-xs-6 col-lg-4 coworker-image text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
             <div class="col-xs-12 col-sm-6 col-lg-8"> <a class="coworker-name">Lizzel</a>
@@ -305,9 +307,98 @@
           <a>See All Coworkers</a> </div>
         
       </div>
+      
+<div class="modal fade" id="question_modal" tabindex="-1" role="dialog" aria-labelledby="modal_label" aria-hidden="true">
+<div class=" center-block">
+<div class="content">
+
+<div class="chat-container">
+       <div class="chat-box-top">
+          <div class="padding chat-box-buttons"> David Harison  <a class="chat-box-buttons pull-right"> <i class=" fa fa-minus"></i>&nbsp; &nbsp; <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button></a></div>
+          </div>
+      <div class="chat-box">
+     <div class="chat-box-message-odd">
+          <div class="activity-stream activity-stream-idea ">
+            <div class="pull-right time"> 12:30:40 am </div>
+            <div class="feed-image coworker-image text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
+            <div class="feed-subject">
+              <p> <a href="javascript:;">Shami Hoang</a>  says</p>
+            </div>
+            <div class="chat-box-message">
+              <ul class="icons-list">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                  Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis 
+                  parturient montes.
+              </ul>
+            </div>
+          </div>
+          </div>
+          
+          
+      <div >
+     <div class="chat-box-message-even">
+          <div class="activity-stream activity-stream-idea ">
+            <div class="pull-right time"> 12:30:40 am </div>
+            <div class="feed-image coworker-image text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
+            <div class="feed-subject">
+              <p> <a href="javascript:;">David Harison</a>  says</p>
+            </div>
+            <div class="chat-box-message">
+              <ul class="icons-list">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                  Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis 
+                  parturient montes.
+              </ul>
+            </div>
+          </div>
+          </div>
+          
+        <div >
+     <div class="chat-box-message-odd">
+          <div class="activity-stream activity-stream-idea ">
+            <div class="pull-right time"> 12:30:40 am </div>
+            <div class="feed-image coworker-image text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
+            <div class="feed-subject">
+              <p> <a href="javascript:;">Shami Hoang</a>  says</p>
+            </div>
+            <div class="chat-box-message">
+              <ul class="icons-list">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                  Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis 
+                  parturient montes.
+              </ul>
+            </div>
+          </div>
+          </div>
+          
+          <div class=" chat-box-compose">
+            
+            <div class="feed-subject">
+              <textarea class="form-control "  placeholder="" tabindex="1"> </textarea>
+              <a class="comment-attach-file"> <i class="fa fa-paperclip"></i> </a> </div>
+ <div class="padding-top"><li class="inline-block ui-tooltip">
+                      <label>
+                        <input type="radio" value="" >
+                        <a class="ui-tooltip" data-toggle="tooltip"data-original-title="Snap messages will delete 30 seconds after the recipients open them" >Snap Message </a> </label>
+                    </li>
+                    <li class="inline-block">
+                      <label>
+                        <input type="radio" value="">
+                        <a class="ui-tooltip zindex10" data-toggle="tooltip"data-original-title="Edit or delete the mistakes before the recipients opens them">Mistake-proof Message™</a> </label>
+                    </li></div>
+          </div>
+         
+        </div>
+      </div>
+</div>
+</div>
+</div>
+
     </div>
+    
   </div>
 </div>
+
 
 <!-- Bootstrap core JavaScript  --> 
 <script type="text/javascript" src="../themes/admin/js/libs/jquery-1.10.2.min.js"></script> 
@@ -323,5 +414,8 @@
 <!-- App JS --> 
 <script type="text/javascript" src="../themes/admin/js/mvpready-core.js"></script> 
 <script type="text/javascript" src="../themes/admin/js/mvpready-admin.js"></script>
+<!-- App JS -->
+        <script type="text/javascript" src="../themes/landing/js/mvpready-core.js"></script>
+        <script type="text/javascript" src="../themes/landing/js/mvpready-landing.js"></script>
 </body>
 </html>
