--- a/public/templates/files.html
+++ b/public/templates/files.html
@@ -133,58 +133,43 @@
     </div>
     <!--inbox-->
     <div class="col-md-9 col-sm-8">
-      <h4 class="title-heading text-center" > all coworkers</h4>
+      <h4 class="title-heading text-center" > all files</h4>
       <div class="row text-center">
-        <div class="text-center padding">
-          <form class="mainnav-form pull-right" role="search">
-            <input class="form-control input-md mainnav-search-query search-form" type="text" placeholder="Search for Coworker...">
+        <div class=" padding text-left"><div class="inline-block"> <a class="btn btn-primary text-left">Upload File</a></div>
+          <div class="pull-right"><form class="mainnav-form" role="search">
+            <input class="form-control input-md mainnav-search-query search-form" type="text" placeholder="Search for a file">
             <button class="btn btn-sm mainnav-form-btn"> <i class="fa fa-search"></i> </button>
-          </form>
+          </form> </div>
         </div>
       </div>
       <hr>
-      <div class="row  coworker-box inline-block text-center">
-        <div class=" all-coworker text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
-        <div class=""> <a class="coworker-name">Lizzel Harison</a>
-          <p class="coworker-title">Marketing Manager</p>
-        </div>
-        <div><b><a href="#">View Profile</a>&nbsp;&nbsp; <a>Send Message</a></b></div>
-      </div>
-      <div class="row  coworker-box inline-block text-center">
-        <div class="all-coworker text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
-        <div class=""> <a class="coworker-name">Lizzel Harison</a>
-          <p class="coworker-title">Marketing Manager</p>
-        </div>
-        <div><b><a href="#">View Profile</a>&nbsp;&nbsp; <a>Send Message</a></b></div>
-      </div>
-      <div class="row  coworker-box inline-block text-center">
-        <div class="all-coworker text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
-        <div class=""> <a class="coworker-name">Lizzel Harison</a>
-          <p class="coworker-title">Marketing Manager</p>
-        </div>
-        <div><b><a href="#">View Profile</a>&nbsp;&nbsp; <a>Send Message</a></b></div>
-      </div>
-         <div class="row  coworker-box inline-block text-center">
-        <div class="all-coworker text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
-        <div class=""> <a class="coworker-name">Lizzel Harison</a>
-          <p class="coworker-title">Marketing Manager</p>
-        </div>
-        <div><b><a href="#">View Profile</a>&nbsp;&nbsp; <a>Send Message</a></b></div>
-      </div>
-         <div class="row  coworker-box inline-block text-center">
-        <div class="all-coworker text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
-        <div class=""> <a class="coworker-name">Lizzel Harison</a>
-          <p class="coworker-title">Marketing Manager</p>
-        </div>
-        <div><b><a href="#">View Profile</a>&nbsp;&nbsp; <a>Send Message</a></b></div>
-      </div>
-         <div class="row  coworker-box inline-block text-center">
-        <div class="all-coworker text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
-        <div class=""> <a class="coworker-name">Lizzel Harison</a>
-          <p class="coworker-title">Marketing Manager</p>
-        </div>
-        <div><b><a href="#">View Profile</a>&nbsp;&nbsp; <a>Send Message</a></b></div>
-      </div>
+      <div><table id="table-1" class="table table-striped table-bordered dataTable" >
+    <thead>
+        <tr>
+            <th></th>
+            <th>Name</th>
+            <th>Type</th>
+            <th>From</th>
+             <th>Modified</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td><a>Download | Mark as Favorite</a></td>
+            <td>SaleReport</td>
+            <td>.pdf</td>
+            <td><a>David Harison</a></td>
+             <td>22/2/2014</td>
+        </tr>
+        <tr>
+         <td><a>Download | Mark as Favorite</a></td>
+            <td>SaleReport</td>
+            <td>.pdf</td>
+            <td><a>David Harison</a></td>
+             <td>22/2/2014</td>
+        </tr>
+    </tbody>
+</table></div>
     </div>
   </div>
 </div>
