--- a/public/templates/settings.html
+++ b/public/templates/settings.html
@@ -148,13 +148,13 @@
               </div>
               <hr>
               <div class="form-group">
-                <label class="col-md-3">enter the new password</label>
+                <label class="col-md-3">enter your new password</label>
                 <div class="col-md-7">
                   <input class="form-control" type="password" name="new-password-1">
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-md-3">enter the new password again</label>
+                <label class="col-md-3">enter your new password again</label>
                 <div class="col-md-7">
                   <input class="form-control" type="password" name="new-password-2">
                 </div>
