changes on heading style

--- a/public/templates/files.html
+++ b/public/templates/files.html
@@ -146,27 +146,30 @@
       <div><table id="table-1" class="table table-striped table-bordered dataTable" >
     <thead>
         <tr>
-            <th></th>
-            <th>Name</th>
-            <th>Type</th>
-            <th>From</th>
-             <th>Modified</th>
+            
+            <th width=""><h4>Name</h4></th>
+            <th width=""><h4>Type</h4></th>
+            <th width=""><h4>From</h4></th>
+             <th width=""><h4>Modified</h4></th>
+             <th width=""></th>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td><a>Download | Mark as Favorite</a></td>
+           
             <td>SaleReport</td>
             <td>.pdf</td>
             <td><a>David Harison</a></td>
              <td>22/2/2014</td>
+              <td><a>Download | Mark as Favorite</a></td>
         </tr>
         <tr>
-         <td><a>Download | Mark as Favorite</a></td>
+      
             <td>SaleReport</td>
             <td>.pdf</td>
             <td><a>David Harison</a></td>
              <td>22/2/2014</td>
+                <td><a>Download | Mark as Favorite</a></td>
         </tr>
     </tbody>
 </table></div>
