--- a/public/templates/Activity Stream.html
+++ b/public/templates/Activity Stream.html
@@ -190,7 +190,19 @@
         </div>
         <div class="stream-box">
           <div class="activity-stream activity-stream-idea">
-            <div class="pull-right"> <a ><i class="fa fa-cog"></i></a> </div>
+            <div class="pull-right btn-group demo-element  padding"> <a class="dropdown-toggle" data-toggle="dropdown" ><i class="fa fa-cog  " ></i></a> <ul class="dropdown-menu" role="menu">
+<li>
+<a href="javascript:;">Hide Conversation</a>
+</li>
+<li>
+<a href="javascript:;">follow this post </a>
+</li>
+<li>
+<a href="javascript:;">send this post to email</a>
+</li>
+
+
+</ul> </div>
             <div class="feed-image coworker-image text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
             <div class="feed-subject">
               <p> <a href="javascript:;">Shami Hoang</a> shared an idea to <a> Entire Company</a>,<a> David Harison and 3 other people</a> </p>
