add new page-term of service

--- a/public/templates/Activity Stream.html
+++ b/public/templates/Activity Stream.html
@@ -195,10 +195,10 @@
 <a href="javascript:;">Hide Conversation</a>
 </li>
 <li>
-<a href="javascript:;">follow this post </a>
+<a href="javascript:;">Follow Conversation</a>
 </li>
 <li>
-<a href="javascript:;">send this post to email</a>
+<a href="javascript:;">Add As Favorite</a>
 </li>
 
 
