change text on activity

--- a/public/templates/Activity Stream.html
+++ b/public/templates/Activity Stream.html
@@ -205,7 +205,7 @@
 </ul> </div>
             <div class="feed-image coworker-image text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
             <div class="feed-subject">
-              <p> <a href="javascript:;">Shami Hoang</a> shared an idea to <a> Entire Company</a>,<a> David Harison and 3 other people</a> </p>
+              <p> <a href="javascript:;">Shami Hoang</a> shared the following idea with the <a> Entire Company</a>,<a> David Harison and 3 other people</a> </p>
             </div>
             <div class="feed-content">
               <ul class="icons-list">
@@ -239,7 +239,7 @@
             <div class="pull-right"> <a ><i class="fa fa-cog"></i></a> </div>
             <div class="feed-image coworker-image text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
             <div class="feed-subject">
-              <p> <a href="javascript:;">Shami Hoang</a>&nbsp;Entered a 360-degree feedback question<a> Entire Company</a>,<a> David Harison and 3 other people</a> </p>
+              <p> <a href="javascript:;">Shami Hoang</a>&nbsp;shared the following 360-degree feedback question with <a>  [Recipient Full Name] </a><a>and 3 other people</a> </p>
             </div>
             <div class="feed-content">
               <ul class="icons-list">
