--- a/public/templates/signup.html
+++ b/public/templates/signup.html
@@ -111,6 +111,7 @@
                             placeholder="Confirm Password">
                     </div>
 
+<div  class="account-footer">By clicking "Create My Account" you agree to 360notion's <a href="termofservice.html"> Terms of Service</a> <p></p></div>
                     <div class="form-group text-center">
                         <button type="submit" class="btn btn-primary sign-in-up">
                             Create My Account &nbsp; 
